--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 </tr>
                                 <tr>
                                     <td>19:05〜19:50</td>
-                                    <td>セッション1: 未定</td>
+                                    <td>私のGitの使い方（犬さん）</td>
                                 </tr>
                                 <tr>
                                     <td>19:50〜20:00</td>
@@ -99,7 +99,7 @@
                                 </tr>
                                 <tr>
                                     <td>20:00〜20:45</td>
-                                    <td>セッション2: 未定</td>
+                                    <td>デストンで使えるアセンダーについて（熱波師さん）</td>
                                 </tr>
                                 <tr>
                                     <td>20:45〜21:00</td>
